# federated_private_emg

./: README.md  environment.txt  environment.yml  pyproject.toml  requirements.txt  setup.py
app/: create_train_test_dataframes.py  create_unified_dataset_from_users_tensors.py  create_vectorised_dataset_file_from_pandas.py  create_windowed_dataset_file.py  federated_model3d_train.py  train_model3d_raw_data.py
federated_private_emg/: utils.py
federated_private_emg/common/: config.py  train_utils.py  utils.py
federated_private_emg/differential_privacy/: accountant_utils.py  params.py  per_sample_gradient_model_wrapper.py  utils.py
federated_private_emg/fed_priv_models/: cnn_target.py  custom_sequential.py  gep.py  model3d.py  model_factory.py  nn_blocks.py  pad_operators.py  resnet_cifar.py
federated_private_emg/fed_priv_models/pFedGP/: Learner.py  __init__.py  class_splits.py  kernel_class.py  node.py  pFedGP_compute.py  pFedGP_full_data.py  tree.py  utils.py
federated_private_emg/federated_learning/: client.py
federated_private_emg/train/: federated_utils.py  params.py  train_objects.py  train_utils.py
notebooks/: Train model3d - Raw Data.ipynb
src/fed_prv_emg/: utils.py
src/fed_prv_emg/fed_priv_models/: model3d.py
tests/: test_model3d.py
