[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "federated_private_emg"
version = "0.0.6"
authors = [
  { name="Moshe Beutel", email="moshebeutel@gmail.com" },
]
description = "A federated learning library of the EMG dataset"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/moshebeutel/federated_private_emg"
"Bug Tracker" = "https://github.com/moshebeutel/federated_private_emg/issues"
