
[tool.poetry]
name = "federated_private_emg"
version = "0.0.13"
authors = ["moshebeutel <moshebeutel@gmail.com>"]
description = "A federated learning library of the EMG dataset"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]



[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
pandas = "^2.1.4"
backpack-for-pytorch = "^1.6.0"
scikit-learn = "^1.3.2"
tables = "^3.9.2"
cython = "^3.0.7"
gpytorch = "^1.11"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
wandb = "^0.16.1"
poethepoet = "^0.24.4"

[tool.poe.tasks]
force-pypolyagamma = "python -m pip install pypolyagamma"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"